--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,4 @@
 steps:
   - name: maven:3.6.0-jdk-11-slim
     entrypoint: 'mvn'
-    args: ['clean', 'install', 'deploy']
+    args: ['clean', 'install', 'package']
