--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
+		<groupId>com.google.cloud.artifactregistry</groupId>
+        			<artifactId>artifactregistry-maven-wagon</artifactId>
 		<version>2.7.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
@@ -74,8 +74,8 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>com.google.cloud.artifactregistry</groupId>
+        			<artifactId>artifactregistry-maven-wagon</artifactId>
 			</plugin>
 		</plugins>
 		 <extensions>
